Add dotenv - Protect my secret data in .env file

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,46 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="wrapper">
+  <%= render 'shared/navbar' %>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%# @foods.each do |food| %>
+  <%#= food.name %>
+  <%#= image_tag("#{food.image_url}", :alt => "#{food.name}") %>
+<%# end %>
