--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -4,6 +4,10 @@
   border-bottom: 1px solid gray;
 }
 
+.navbar-transparant {
+  background-color: transparent;
+}
+
 .navbar__left {
   display: flex;
   align-items: center;
