--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
       <h3>LIVRAISON GRATUITE</h3>
       <h4>Nous prenons soins de préparer vos <br> préférées commandes</h4>
 
-      <%= link_to 'COMMANDE', food_index_path %>
+      <%= link_to 'COMMANDE', foods_path %>
     </div>
   </div>
 
@@ -33,7 +33,7 @@
 
   <div class="cards__food">
     <% @foods.each do |food| %>
-      <%= link_to(food_index_path) do %>
+      <%= link_to(foods_path) do %>
         <div class="card__food">
           <div class="card__food-img" style="background-image: url(<%= food.image_url %>);"></div>
           <h3><%= food.name.upcase %></h3>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="promo__link-left">
-          <%= link_to 'COMMANDER', food_index_path %>
+          <%= link_to 'COMMANDER', foods_path %>
         </div>
       </div>
 
@@ -83,7 +83,7 @@
         </div>
 
         <div class="promo__link-right">
-          <%= link_to 'COMMANDER', food_index_path %>
+          <%= link_to 'COMMANDER', foods_path %>
         </div>
       </div>
 
