--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
 
     <div class="find__burger-snack">
       <div class="link">
-        <%= link_to(food_index_path) do %>
+        <%= link_to(foods_path) do %>
           <p><%= fa_icon "cutlery" %> | Trouve nous !</p>
         <% end %>
       </div>
