render cards-food > order visible/hidden

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,9 @@
         <div class="card__food">
           <div class="card__food-img" style="background-image: url(<%= food.image_url %>);"></div>
           <h3><%= food.name.upcase %></h3>
+          <div id="hide">
+            <p>ORDER</p>
+          </div>
         </div>
         <% end %>
       <% end %>
