--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -5,13 +5,13 @@
   column-gap: 10px;
   width: 1075px;
   margin: 90px auto;
-  row-gap: 40px;
 }
 
 .card__food {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 302px;
 }
 
 .card__food-img {
@@ -25,6 +25,23 @@
   font-weight: 700;
   font-family: "Monserrat", sans-serif;
   padding-top: 10px;
+}
+
+.card__food p {
+  color: #B68107;
+  font-family: "Monserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.card__food {
+  &:hover > #hide {
+    visibility: visible;
+  }
+}
+
+#hide {
+    visibility: hidden;
 }
 
 .cards__food a {
