--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
           <div class="card__food-img" style="background-image: url(<%= food.image_url %>);"></div>
           <h3><%= food.name.upcase %></h3>
           <div id="hide">
-            <p>ORDER</p>
+            <p>ORDER <%= fa_icon "arrow-right" %></p>
           </div>
         </div>
         <% end %>
@@ -95,6 +95,23 @@
     </div>
   </div>
 
-  <div class="footer"></div>
+  <div class="footer">
+    <div class="content">
+      <div class="left">
+        <h3>A PROPOS</h3>
+        <p>Nos valeurs</p>
+        <p>Santé et sécurité</p>
+      </div>
+      <div class="middle">
+        <p>Nouvelles et évènements</p>
+        <p>Nous trouver</p>
+      </div>
+      <div class="right">
+        <h3>CONNECT TOI AVEC NOUS !</h3>
+        <p><%= fa_icon "github 2x" %> <%= fa_icon "instagram 2x" %> <%= fa_icon "linkedin 2x" %></p>
+      </div>
+    </div>
+
+  </div>
 
 </div>
