--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -47,6 +47,10 @@
 .cards__food a {
   text-decoration: none;
   color: #441400;
+  &:hover {
+    text-decoration: none;
+    color: #441400;
+  }
 }
 
 //////////// cards at the bottom of the footer ////////////
