--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,16 +5,30 @@
       <img src="https://res.cloudinary.com/dkpy2yoeq/image/upload/v1588835476/restau-app/burger_lbyodt.png" alt="logo">
     </div>
 
-      <div class="user__sign-in">
-        <%= link_to(new_user_session_path) do %>
-          <div class="user__sign-in__icon">
-            <%= fa_icon "fas user 2x" %>
-          </div>
-          <div class="user__sign-in__text">
-            <h6>CONNECT-TOI</h6>
-          </div>
-        <% end %>
+    <% if user_signed_in? %>
+    <div class="user__sign-in">
+      <%= link_to destroy_user_session_path, :method => :delete do %>
+        <div class="user__sign-in__icon">
+          <%= fa_icon "fas user 2x" %>
+        </div>
+        <div class="user__sign-in__text">
+          <h6>SE DECONNECTER</h6>
+        </div>
+      <% end %>
     </div>
+    <% else %>
+    <div class="user__sign-in">
+      <%= link_to(new_user_session_path) do %>
+        <div class="user__sign-in__icon">
+          <%= fa_icon "fas user 2x" %>
+        </div>
+        <div class="user__sign-in__text">
+          <h6>SE CONNECTER</h6>
+        </div>
+      <% end %>
+    </div>
+
+    <% end  %>
   </div>
 
   <div class="navbar__right">
